# FirstRustProject

./: Cargo.toml  tables.sql
src/: database.rs  main.rs
src/routes/: create_user.rs  hello_user.rs  home.rs  mod.rs  todos.rs
